Trying to merge javascript and html
Issue of compatibility with Chinese keyboards to be resolved by
creating a new file with a new name and copying and pasting. It seems
that it’s the file name but it’s not enough just to rename

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,18 @@ __pycache__/
 .RData
 .Rhistory
 Data/FoodPremises/ukpostcodes.csv
-
+*.csv
+*.shp
+*.png
+*.jpg
+*.geojson
+*.json
+*.dbf
+*.sbn
+*.shx
+*.cpg
+*.sbx
+*London_Ward*
+*.prj
+*.mxd
 Icon?
